# cockbot-backend

./: Cargo.toml  README.md  Rocket.toml
migrations/2020-01-24-141327_create_generic_ingredient/: down.sql  up.sql
migrations/2020-01-24-141327_create_ingredient_category/: down.sql  up.sql
migrations/2020-01-24-141840_create_glass/: down.sql  up.sql
migrations/2020-01-24-142038_create_cocktail_category/: down.sql  up.sql
migrations/2020-01-24-142127_create_cocktail/: down.sql  up.sql
migrations/2020-01-24-142203_create_ingredient/: up.sql
migrations/2020-01-24-142257_create_recipe/: up.sql
migrations/2020-01-24-142352_create_accessory_category/: down.sql  up.sql
migrations/2020-01-24-142520_create_accessory/: down.sql  up.sql
migrations/2020-01-24-142630_create_cocktail_accessory/: down.sql  up.sql
migrations/2020-01-24-142827_create_recipe_ingredient_suggestion/: down.sql  up.sql
migrations/2020-01-24-142903_create_cocktail_accessory_suggestion/: down.sql  up.sql
migrations/2020-01-24-150001_create_tag/: up.sql
migrations/2020-01-24-150002_create_cocktail_tag/: down.sql  up.sql
migrations/2020-01-24-150003_create_variation/: down.sql  up.sql
migrations/2020-01-24-150004_create_variation_ingredient/: down.sql  up.sql
migrations/2020-01-24-150005_create_variation_accessory/: down.sql  up.sql
migrations/2020-01-24-160000_add_unique_indices/: down.sql  up.sql
migrations/2020-01-24-160519_insert_generic_ingredient/: down.sql
migrations/2020-01-24-160519_insert_ingredient_category/: down.sql  up.sql
src/: lib.rs  main.rs
(+69 files in other folders)
