[package]
name = "cockbot-backend"
version = "0.1.0"
authors = ["Torben Carstens <github@carstens.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.3", features = ["postgres"], default_features = false }
rocket = { version = "0.4.2", default-features = false }
juniper = { version = "0.14.2", features = ["serde_json"] }
juniper_rocket = "0.5.2"
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"]}
regex = "1.3.4"
rocket_http = { version = "0.4.2", default-features = false }
rocket_contrib = { version = "0.4.2", features = ["diesel_postgres_pool"], default-features = false }
